--- a/app/src/main/res/layout/perorder.xml
+++ b/app/src/main/res/layout/perorder.xml
@@ -157,21 +157,21 @@
         android:layout_marginTop="30dp"
         android:orientation="horizontal"
         android:id="@+id/optionsLayout"
-        android:weightSum="3">
+        android:weightSum="2">
 
-        <Button
+<!--        <Button
             android:id="@+id/confirm"
             style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Confirm" />
+            android:text="Confirm" />-->
 
         <Button
             android:id="@+id/cancel"
             style="@style/Widget.AppCompat.Button.Colored"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Cancel" />
 
