--- a/app/src/main/res/layout/post.xml
+++ b/app/src/main/res/layout/post.xml
@@ -1,60 +1,135 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@color/bg_color">
 
     <include
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        layout="@layout/toolbar"
-        android:layout_gravity="center_horizontal" />
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar" />
 
-    <Spinner
+    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/YogaCard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginBottom="1dp"
+        android:layout_marginTop="40dp"
+        android:clickable="true"
+        android:foreground="?android:attr/selectableItemBackground">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:paddingLeft="24dp"
+            android:paddingRight="24dp"
+            android:paddingTop="20dp"
+            android:layout_gravity="center">
+
+            <!-- Text Label -->
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="10dip"
+                android:text="hotel name"
+                android:textColor="@color/black_light"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:background="@drawable/spinback"
+                android:layout_marginTop="20dp"
+                android:orientation="horizontal"
+                android:weightSum="5">
+
+                <android.support.v7.widget.AppCompatSpinner
+                    android:id="@+id/spinner"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="4.5"
+                    android:background="@color/bg_color">
+
+                </android.support.v7.widget.AppCompatSpinner>
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="0.5"
+                    android:onClick="showdrop"
+                    android:src="@drawable/multimedia" />
+            </LinearLayout>
+
+            <EditText
+                android:id="@+id/title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_margin="15dp"
+                android:hint="Title" />
+
+            <EditText
+                android:id="@+id/price"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_margin="15dp"
+                android:hint="Price" />
+
+            <EditText
+                android:id="@+id/veg"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_margin="15dp"
+                android:hint="Veg - 0 , Non Veg - 1" />
+
+<!--            <Button
+                android:id="@+id/add"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_margin="20dp"
+                android:layout_gravity="center_horizontal"
+                style="@style/Widget.AppCompat.Button.Colored"
+                android:text="Add" />-->
+
+            <android.support.v7.widget.AppCompatButton
+                android:id="@+id/add"
+                style="@style/Widget.AppCompat.Button.Colored"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="24dp"
+                android:layout_marginTop="24dp"
+                android:padding="12dp"
+                android:text="Proceed to Checkout" />
+
+        </LinearLayout>
+
+    </android.support.v7.widget.CardView>
+
+<!--    <Spinner
         android:id="@+id/spinner"
-        android:layout_gravity="center_horizontal"
-        android:spinnerMode="dropdown"
-        android:layout_margin="15dp"
-        android:background="@color/splashback" />
-
-    <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/title"
         android:layout_gravity="center_horizontal"
         android:layout_margin="15dp"
-        android:hint="Title" />
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/price"
-        android:layout_gravity="center_horizontal"
-        android:layout_margin="15dp"
-        android:hint="Price" />
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/veg"
-        android:layout_gravity="center_horizontal"
-        android:layout_margin="15dp"
-        android:hint="Veg - 0 , Non Veg - 1"
-        />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="add"
-        android:id="@+id/add"
-        android:layout_gravity="center_horizontal"
-        android:background="@color/colorPrimary" />
+        android:layout_marginTop="30dp"
+        android:background="@color/splashback"
+        android:spinnerMode="dropdown" />-->
 
     <ProgressBar
+        android:id="@+id/progressBar3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/progressBar3"
         android:layout_gravity="center_horizontal"
         android:visibility="gone" />
 </LinearLayout>
